--- a/dmu26/dmu26_XID+SPIRE_SSDF/XID+SPIRE_prior.ipynb
+++ b/dmu26/dmu26_XID+SPIRE_SSDF/XID+SPIRE_prior.ipynb
@@ -69,7 +69,7 @@
    },
    "outputs": [],
    "source": [
-    "cigale=Table.read('../../dmu28/dmu28_SSDF/data/hatlas_ssdf_Ldust_prediction_results.fits')"
+    "cigale=Table.read('../../dmu28/dmu28_SSDF/data/SSDF_Ldust_prediction_results.fits')"
    ]
   },
   {
@@ -332,16 +332,16 @@
    "source": [
     "#---prior250--------\n",
     "prior250=xidplus.prior(im250,nim250,im250phdu,im250hdu, moc=Sel_func)#Initialise with map, uncertianty map, wcs info and primary header\n",
-    "prior250.prior_cat(prior['RA'] ,prior['Dec'] ,'hatlas_sgp_Ldust_prediction_results.fits',ID=prior['help_id'] )#Set input catalogue\n",
+    "prior250.prior_cat(prior['RA'] ,prior['Dec'] ,'SSDF_Ldust_prediction_results.fits',ID=prior['help_id'] )#Set input catalogue\n",
     "prior250.prior_bkg(-5.0,5)#Set prior on background (assumes Gaussian pdf with mu and sigma)\n",
     "#---prior350--------\n",
     "prior350=xidplus.prior(im350,nim350,im350phdu,im350hdu, moc=Sel_func)\n",
-    "prior350.prior_cat(prior['RA'] ,prior['Dec'] ,'hatlas_sgp_Ldust_prediction_results.fits',ID=prior['help_id'] )\n",
+    "prior350.prior_cat(prior['RA'] ,prior['Dec'] ,'SSDF_Ldust_prediction_results.fits',ID=prior['help_id'] )\n",
     "prior350.prior_bkg(-5.0,5)\n",
     "\n",
     "#---prior500--------\n",
     "prior500=xidplus.prior(im500,nim500,im500phdu,im500hdu, moc=Sel_func)\n",
-    "prior500.prior_cat(prior['RA'] ,prior['Dec'] ,'hatlas_sgp_Ldust_prediction_results.fits',ID=prior['help_id'] )\n",
+    "prior500.prior_cat(prior['RA'] ,prior['Dec'] ,'SSDF_Ldust_prediction_results.fits',ID=prior['help_id'] )\n",
     "prior500.prior_bkg(-5.0,5)"
    ]
   },
@@ -455,9 +455,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
-   "name": "python3"
+   "name": "helpint"
   },
   "language_info": {
    "codemirror_mode": {
