--- a/dmu32/dmu32_ELAIS-N2/ELAIS-N2_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N2/ELAIS-N2_catalogue_merging.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2019-09-20 18:37:18.689772\n"
+      "2019-09-24 19:08:07.582672\n"
      ]
     }
    ],
@@ -620,7 +620,18 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column cigale_chi2_opt has missing data\n",
+      "Column cigale_chi2_ir has missing data\n",
+      "Column cigale_chi2_red has missing data\n",
+      "Column cigale_chi2_ironly has missing data\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL_CAT:\n",
     "\n",
@@ -646,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
