AKARI-SEP ready for final merge

--- a/dmu32/dmu32_AKARI-SEP/AKARI-SEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-SEP/AKARI-SEP_catalogue_merging.ipynb
@@ -21,7 +21,8 @@
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "FIRST_RUN_FOR_CIGALE = True\n",
+    "MAKE_CIGLAE_INPUT = True\n",
+    "MAKE_FINAL_CAT = False\n",
     "\n",
     "SUFFIX = '20180221'"
    ]
@@ -78,21 +79,21 @@
    },
    "outputs": [],
    "source": [
-    "# # XID+ MIPS24\n",
+    "# XID+ MIPS24\n",
     "\n",
-    "# xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
-    "#                           \"dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits\")\n",
-    "# xid_mips24.meta = None\n",
+    "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
+    "                          \"dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits\")\n",
+    "xid_mips24.meta = None\n",
     "\n",
-    "# # Adding the error column\n",
-    "# xid_mips24.add_column(Column(\n",
-    "#     data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
-    "#                  xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_mips_24\"\n",
-    "# ))\n",
-    "# xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
-    "# xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
+    "# Adding the error column\n",
+    "xid_mips24.add_column(Column(\n",
+    "    data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
+    "                 xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_mips_24\"\n",
+    "))\n",
+    "xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
+    "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
    ]
   },
   {
@@ -103,38 +104,38 @@
    },
    "outputs": [],
    "source": [
-    "# # XID+ PACS\n",
+    "# XID+ PACS\n",
     "\n",
-    "# xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/\"\n",
-    "#                         \"dmu26_XID+PACS_CDFS-SWIRE_cat_20171019.fits\")\n",
-    "# xid_pacs.meta = None\n",
+    "xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/\"\n",
+    "                        \"dmu26_XID+PACS_CDFS-SWIRE_cat_20171019.fits\")\n",
+    "xid_pacs.meta = None\n",
     "\n",
-    "# # Convert from mJy to μJy\n",
-    "# for col in [\"F_PACS_100\", \"FErr_PACS_100_u\", \"FErr_PACS_100_l\",\n",
-    "#             \"F_PACS_160\", \"FErr_PACS_160_u\", \"FErr_PACS_160_l\"]:\n",
-    "#     xid_pacs[col] *= 1000\n",
+    "# Convert from mJy to μJy\n",
+    "for col in [\"F_PACS_100\", \"FErr_PACS_100_u\", \"FErr_PACS_100_l\",\n",
+    "            \"F_PACS_160\", \"FErr_PACS_160_u\", \"FErr_PACS_160_l\"]:\n",
+    "    xid_pacs[col] *= 1000\n",
     "\n",
-    "# xid_pacs.add_column(Column(\n",
-    "#     data=np.max([xid_pacs['FErr_PACS_100_u'] - xid_pacs['F_PACS_100'],\n",
-    "#                  xid_pacs['F_PACS_100'] - xid_pacs['FErr_PACS_100_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_pacs_green\"\n",
-    "# ))\n",
-    "# xid_pacs['F_PACS_100'].name = \"f_pacs_green\"\n",
-    "# xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
+    "xid_pacs.add_column(Column(\n",
+    "    data=np.max([xid_pacs['FErr_PACS_100_u'] - xid_pacs['F_PACS_100'],\n",
+    "                 xid_pacs['F_PACS_100'] - xid_pacs['FErr_PACS_100_l']],\n",
+    "                axis=0),\n",
+    "   name=\"ferr_pacs_green\"\n",
+    "))\n",
+    "xid_pacs['F_PACS_100'].name = \"f_pacs_green\"\n",
+    "xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
     "\n",
-    "# xid_pacs.add_column(Column(\n",
-    "#     data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
-    "#                  xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_pacs_red\"\n",
-    "# ))\n",
-    "# xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
-    "# xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
+    "xid_pacs.add_column(Column(\n",
+    "    data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
+    "                 xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_pacs_red\"\n",
+    "))\n",
+    "xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
+    "xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
     "\n",
-    "# xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
-    "#                     'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
-    "#                     'flag_pacs_red']\n"
+    "xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
+    "                    'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
+    "                    'flag_pacs_red']\n"
    ]
   },
   {
@@ -145,46 +146,46 @@
    },
    "outputs": [],
    "source": [
-    "# # XID+ SPIRE\n",
+    "# XID+ SPIRE\n",
     "\n",
-    "# xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
-    "#                          \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
-    "# xid_spire.meta = None\n",
+    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
+    "                         \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
+    "xid_spire.meta = None\n",
     "\n",
-    "# xid_spire['HELP_ID'].name = \"help_id\"\n",
+    "xid_spire['HELP_ID'].name = \"help_id\"\n",
     "\n",
-    "# # Convert from mJy to μJy\n",
-    "# for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
-    "#             \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
-    "#             \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
-    "#     xid_spire[col] *= 1000\n",
+    "# Convert from mJy to μJy\n",
+    "for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
+    "            \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
+    "            \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
+    "    xid_spire[col] *= 1000\n",
     "\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
-    "#                  xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_250\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
-    "#                  xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_350\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
-    "#                  xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_500\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
+    "                 xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_250\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
+    "                 xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_350\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
+    "                 xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_500\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
     "\n",
-    "# xid_spire = xid_spire['help_id',\n",
-    "#                       'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
-    "#                       'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
-    "#                       'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
+    "xid_spire = xid_spire['help_id',\n",
+    "                      'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
+    "                      'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
+    "                      'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
    ]
   },
   {
@@ -257,15 +258,15 @@
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(ml, xid_mips24, join_type='left')\n",
+    "merged_table = join(ml, xid_mips24, join_type='left')\n",
     "\n",
-    "# # Fill values\n",
-    "# for col in xid_mips24.colnames:\n",
-    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "#         merged_table[col].fill_value = np.nan\n",
-    "#     elif col.startswith(\"flag_\"):\n",
-    "#         merged_table[col].fill_value = False\n",
-    "# merged_table = merged_table.filled()"
+    "# Fill values\n",
+    "for col in xid_mips24.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -276,15 +277,15 @@
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(merged_table, xid_pacs, join_type='left')\n",
+    "merged_table = join(merged_table, xid_pacs, join_type='left')\n",
     "        \n",
-    "# # Fill values\n",
-    "# for col in xid_pacs.colnames:\n",
-    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "#         merged_table[col].fill_value = np.nan\n",
-    "#     elif col.startswith(\"flag_\"):\n",
-    "#         merged_table[col].fill_value = False\n",
-    "# merged_table = merged_table.filled()"
+    "# Fill values\n",
+    "for col in xid_pacs.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -295,15 +296,15 @@
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(merged_table, xid_spire, join_type='left')\n",
+    "merged_table = join(merged_table, xid_spire, join_type='left')\n",
     "        \n",
-    "# # Fill values\n",
-    "# for col in xid_spire.colnames:\n",
-    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "#         merged_table[col].fill_value = np.nan\n",
-    "#     elif col.startswith(\"flag_\"):\n",
-    "#         merged_table[col].fill_value = False\n",
-    "# merged_table = merged_table.filled()"
+    "# Fill values\n",
+    "for col in xid_spire.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -319,17 +320,6 @@
     "# Fill values\n",
     "#merged_table['redshift'].fill_value = np.nan\n",
     "#merged_table = merged_table.filled()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "merged_table = ml"
    ]
   },
   {
@@ -379,7 +369,7 @@
     }
    ],
    "source": [
-    "if FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_CIGALE_INPUT:\n",
     "    \n",
     "    # Sorting the columns\n",
     "    bands_tot = [col[2:] for col in merged_table.colnames\n",
@@ -428,32 +418,40 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CAT:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_CDFS-SWIRE/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_AKARI-SEP/data/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
-    "    flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
-    "    flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
-    "    flag_cigale = (\n",
-    "        (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
-    "             <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
-    "        flag_cigale_opt & flag_cigale_ir)\n",
-    "    flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
+    "    # UPDATE - we no longer do this and instead provide the chi2 values \n",
+    "    #flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
+    "    #flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
+    "    #flag_cigale = (\n",
+    "    #    (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
+    "    #         <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
+    "    #    flag_cigale_opt & flag_cigale_ir)\n",
+    "    #flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
     "\n",
-    "    cigale.add_columns([\n",
-    "        MaskedColumn(flag_cigale, \"flag_cigale\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
-    "                     dtype=int, fill_value=-1)\n",
-    "    ])\n",
-    "\n",
+    "    #cigale.add_columns([\n",
+    "    #    MaskedColumn(flag_cigale, \"flag_cigale\", \n",
+    "    #                 dtype=int, fill_value=-1),\n",
+    "    #    MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
+    "    #                 dtype=int, fill_value=-1),\n",
+    "    #    MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
+    "    #                 dtype=int, fill_value=-1),\n",
+    "    #    MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
+    "    #                 dtype=int, fill_value=-1)\n",
+    "    #])\n",
+    "    \n",
+    "    #UPDATE Instead of flags above we include all cols used to make \n",
+    "    #deprecated flags\n",
+    "    cigale[\"UVoptIR_OPTchi2\"].name                 =  \"cigale_chi2_opt\"\n",
+    "    cigale[\"UVoptIR_IRchi2\"].name                  =  \"cigale_chi2_ir\"\n",
+    "    cigale[\"UVoptIR_best.reduced_chi_square\"].name =  \"cigale_chi2_red\"\n",
+    "    cigale[\"IRonly_IRchi2\"].name                   =  \"cigale_chi2_ironly\"\n",
+    "    \n",
     "    cigale['UVoptIR_bayes.stellar.m_star'].name =  \"cigale_mstar\"\n",
     "    cigale['UVoptIR_bayes.stellar.m_star_err'].name = \"cigale_mstar_err\"\n",
     "    cigale['UVoptIR_bayes.sfh.sfr10Myrs'].name = \"cigale_sfr\"\n",
@@ -466,8 +464,11 @@
     "    cigale = cigale['help_id', 'cigale_mstar', 'cigale_mstar_err', 'cigale_sfr',\n",
     "                    'cigale_sfr_err', 'cigale_dustlumin', 'cigale_dustlumin_err', \n",
     "                    'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err', \n",
-    "                    'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', \n",
-    "                    'flag_cigale_ironly']"
+    "                    #Old flags\n",
+    "                    #'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly'\n",
+    "                    #New chi2 values\n",
+    "                    \"cigale_chi2_opt\", \"cigale_chi2_ir\", \"cigale_chi2_red\", \"cigale_chi2_ironly\"\n",
+    "                   ]"
    ]
   },
   {
@@ -478,7 +479,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CAT:\n",
     "\n",
     "    merged_table = join(merged_table, cigale, join_type='left')\n",
     "\n",
@@ -508,7 +509,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CAT:\n",
     "\n",
     "    bands = [col[2:] for col in merged_table.colnames\n",
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
@@ -523,7 +524,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CAT:\n",
     "\n",
     "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
     "    for band in bands:\n",
@@ -535,8 +536,12 @@
     "                columns.append(colname)\n",
     "    columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
     "                'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', \n",
-    "                'cigale_dustlumin_ironly_err', 'flag_cigale', 'flag_cigale_opt', \n",
-    "                'flag_cigale_ir', 'flag_cigale_ironly', 'stellarity', \n",
+    "                'cigale_dustlumin_ironly_err', \n",
+    "                #Old flags\n",
+    "                #'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly'\n",
+    "                #New chi2 values\n",
+    "                'cigale_chi2_opt', 'cigale_chi2_ir', 'cigale_chi2_red', 'cigale_chi2_ironly',\n",
+    "                'stellarity', \n",
     "                'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
     "                'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', \n",
     "                'zspec_association_flag']"
@@ -550,7 +555,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CAT:\n",
     "\n",
     "    # Check that we did not forget any column\n",
     "    assert set(columns) == set(merged_table.colnames)"
@@ -571,10 +576,10 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CAT:\n",
     "\n",
     "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
-    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\", overwrite=True)"
+    "    merged_table[columns].write(\"data/AKARI-SEP.fits\", overwrite=True)"
    ]
   }
  ],
@@ -594,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
